--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,8 +10,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.3
 
+      - name: Install .NET
+        uses: actions/setup-dotnet@v1.7.2
+        with:
+          dotnet-version: 5.0.x        
+
       - name: Install MSBuild
         uses: microsoft/setup-msbuild@v1.0.2
+
+      - name: Restore packages
+        run: dotnet restore
 
       - name: Build
         run: msbuild -p:Configuration=Release
