--- a/DotnetRuntimeBootstrapper.MSBuild/DotnetRuntimeBootstrapper.MSBuild.csproj
+++ b/DotnetRuntimeBootstrapper.MSBuild/DotnetRuntimeBootstrapper.MSBuild.csproj
@@ -4,10 +4,24 @@
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
 
+    <!-- Embed the bootstrapper -->
+    <ItemGroup>
+        <EmbeddedResource Include="../DotnetRuntimeBootstrapper/bin/$(Configuration)/DotnetRuntimeBootstrapper.exe">
+            <Link>DotnetRuntimeBootstrapper.exe</Link>
+            <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+            <Visible>false</Visible>
+        </EmbeddedResource>
+        <EmbeddedResource Include="../DotnetRuntimeBootstrapper/bin/$(Configuration)/DotnetRuntimeBootstrapper.exe.config">
+            <Link>DotnetRuntimeBootstrapper.exe.config</Link>
+            <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+            <Visible>false</Visible>
+        </EmbeddedResource>
+    </ItemGroup>
+
     <ItemGroup>
       <PackageReference Include="Microsoft.Build.Framework" Version="16.9.0" PrivateAssets="all" />
       <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.9.0" PrivateAssets="all" />
-      <PackageReference Include="Mono.Cecil" Version="0.11.3" />
+      <PackageReference Include="Mono.Cecil" Version="0.11.3" PrivateAssets="all" />
     </ItemGroup>
 
 </Project>
