--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.csproj
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.csproj
@@ -72,9 +72,9 @@
         <Compile Include="RuntimeComponents\WindowsUpdate3063858RuntimeComponent.cs" />
         <Compile Include="RuntimeComponents\WindowsUpdate3154518RuntimeComponent.cs" />
         <Compile Include="Utils\CommandLine.cs" />
+        <Compile Include="Utils\Extensions\AssemblyExtensions.cs" />
         <Compile Include="Utils\Extensions\FunctionalExtensions.cs" />
         <Compile Include="Utils\Extensions\RegistryExtensions.cs" />
-        <Compile Include="Utils\Extensions\StreamExtensions.cs" />
         <Compile Include="Utils\FileEx.cs" />
         <Compile Include="Utils\Http.cs" />
         <Compile Include="Utils\SemanticVersion.cs" />
