Add package metadata

--- a/DotnetRuntimeBootstrapper.Launcher/App.config
+++ b/DotnetRuntimeBootstrapper.Launcher/App.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
+
+<!-- This configuration file is required by the bootstrapper executable which runs on legacy .NET Framework for maximum compatibility -->
+
 <configuration>
+    <!-- Prefer .NET 3.5 (preinstalled on Windows 7), rollover to .NET 4.0 (preinstalled on Windows 8+) -->
     <startup useLegacyV2RuntimeActivationPolicy="true">
-        <!-- Prefer .NET 4.0, fallback to .NET 3.5 -->
-        <!-- https://docs.microsoft.com/en-us/dotnet/framework/migration-guide/how-to-configure-an-app-to-support-net-framework-4-or-4-5#to-configure-your-app-to-run-on-the-net-framework-4-or-later-versions -->
-        <supportedRuntime version="v2.0.50727"/>
-        <supportedRuntime version="v4.0"/>
+        <supportedRuntime version="v2.0.50727" />
+        <supportedRuntime version="v4.0" />
     </startup>
 </configuration>
