--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.csproj
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.csproj
@@ -21,12 +21,12 @@
 
     <!-- Embed the bootstrapper file inside the assembly -->
     <ItemGroup>
-        <EmbeddedResource Include="../DotnetRuntimeBootstrapper.Launcher/bin/$(Configuration)/DotnetRuntimeBootstrapper.Launcher.exe">
+        <EmbeddedResource Include="../DotnetRuntimeBootstrapper.Executable/bin/$(Configuration)/DotnetRuntimeBootstrapper.Executable.exe">
             <Link>Bootstrapper.exe</Link>
             <CopyToOutputDirectory>Never</CopyToOutputDirectory>
             <Visible>false</Visible>
         </EmbeddedResource>
-        <EmbeddedResource Include="../DotnetRuntimeBootstrapper.Launcher/bin/$(Configuration)/DotnetRuntimeBootstrapper.Launcher.exe.config">
+        <EmbeddedResource Include="../DotnetRuntimeBootstrapper.Executable/bin/$(Configuration)/DotnetRuntimeBootstrapper.Executable.exe.config">
             <Link>Bootstrapper.exe.config</Link>
             <CopyToOutputDirectory>Never</CopyToOutputDirectory>
             <Visible>false</Visible>
@@ -37,6 +37,7 @@
         <None Include="../favicon.png" Pack="true" PackagePath="" />
         <None Include="DotnetRuntimeBootstrapper.props" Pack="true" PackagePath="build" />
         <None Include="DotnetRuntimeBootstrapper.targets" Pack="true" PackagePath="build" />
+        <None Include="rcedit.exe" Pack="true" PackagePath="build" />
         <None Include="$(OutputPath)/netstandard2.0/*.dll" Pack="true" PackagePath="build/netstandard2.0" />
         <None Include="$(OutputPath)/net472/*.dll" Pack="true" PackagePath="build/net472" />
     </ItemGroup>
@@ -47,6 +48,12 @@
       <PackageReference Include="Mono.Cecil" Version="0.11.3" PrivateAssets="all" GeneratePathProperty="true" />
     </ItemGroup>
 
+    <!-- Download RCEdit CLI -->
+    <Target Name="DownloadRCEdit" BeforeTargets="Build">
+        <Exec Command="powershell -ExecutionPolicy Bypass -File ./Download-RCEdit.ps1" />
+        <Copy SourceFiles="$(ProjectDir)/rcedit.exe" DestinationFiles="$(OutDir)/rcedit.exe" SkipUnchangedFiles="true" />
+    </Target>
+    
     <!-- These elements are needed to get the dependencies working when this assembly is referenced as project
        (i.e. only for DotnetRuntimeBootstrapper.Demo; shouldn't be required when referenced as NuGet package) -->
     <PropertyGroup>
