--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
@@ -14,6 +14,7 @@
                 TargetExecutableFilePath="$(OutputPath)/$(AssemblyName).dll"
                 TargetRuntimeName="Microsoft.WindowsDesktop.App"
                 TargetRuntimeVersion="3.1.15"
+                ApplicationIconFilePath="$(ApplicationIcon)"
         />
     </Target>
 
