--- a/DotnetRuntimeBootstrapper.Executable/DotnetRuntimeBootstrapper.Executable.csproj
+++ b/DotnetRuntimeBootstrapper.Executable/DotnetRuntimeBootstrapper.Executable.csproj
@@ -73,6 +73,7 @@
     <Compile Include="RuntimeComponents\WindowsUpdate3154518RuntimeComponent.cs" />
     <Compile Include="Utils\CommandLine.cs" />
     <Compile Include="Utils\Extensions\AssemblyExtensions.cs" />
+    <Compile Include="Utils\Extensions\CollectionExtensions.cs" />
     <Compile Include="Utils\Extensions\FunctionalExtensions.cs" />
     <Compile Include="Utils\Extensions\RegistryExtensions.cs" />
     <Compile Include="Utils\FileEx.cs" />
