--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
@@ -1,14 +1,24 @@
-﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
+﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" TreatAsLocalProperty="ApplicationIconFullPath" ToolsVersion="4.0">
 
-  <Target Name="CreateBootstrapper" AfterTargets="Build" Condition="'$(OutputType)' == 'WinExe'">
-    <!-- TODO: properly resolve runtime name/version -->
+  <PropertyGroup>
+    <ApplicationIconFullPath Condition="'$(ApplicationIcon)' != ''">$([System.IO.Path]::Combine('$(ProjectDir)', '$(ApplicationIcon)'))</ApplicationIconFullPath>
+  </PropertyGroup>
+
+  <Target Name="CreateBootstrapper" AfterTargets="Build">
+    <!-- Warning: not Windows executable -->
+    <Warning Text="Project output type is not WinExe; boostrapper will not be created." Condition="'$(OutputType)' != 'WinExe'" />
+
+    <!-- Warning: not Windows target platform -->
+    <Warning Text="Target platform is not Windows; boostrapper will not be created." Condition="'$(TargetPlatformIdentifier)' != 'Windows'" />
+
+    <!-- TODO: detect latest available runtime for a given target framework version -->
     <CreateBootstrapperTask
-      TargetApplicationName="$(AssemblyName)"
-      TargetFilePath="$(OutDir)/$(AssemblyName).dll"
-      RuntimeName="Microsoft.WindowsDesktop.App"
-      RuntimeVersion="5.0.0"
-      IconFilePath="$(ApplicationIcon)"
-    />
+      Condition="'$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'"
+      TargetApplicationName="$(AssemblyTitle)"
+      TargetFilePath="$(TargetPath)"
+      TargetRuntimeName="Microsoft.WindowsDesktop.App"
+      TargetRuntimeVersion="$([System.String]::Copy('$(TargetFrameworkVersion)').Trim('v'))"
+      IconFilePath="$(ApplicationIconFullPath)" />
   </Target>
 
 </Project>
