--- a/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
+++ b/DotnetRuntimeBootstrapper/DotnetRuntimeBootstrapper.targets
@@ -1,24 +1,38 @@
-﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" TreatAsLocalProperty="ApplicationIconFullPath" ToolsVersion="4.0">
+﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" TreatAsLocalProperty="ApplicationIconFilePath" ToolsVersion="4.0">
 
-  <PropertyGroup>
-    <ApplicationIconFullPath Condition="'$(ApplicationIcon)' != ''">$([System.IO.Path]::Combine('$(ProjectDir)', '$(ApplicationIcon)'))</ApplicationIconFullPath>
-  </PropertyGroup>
-
-  <Target Name="CreateBootstrapper" AfterTargets="Build">
+  <Target Name="CheckBootstrapperPrerequisites" AfterTargets="Build;Publish">
     <!-- Warning: not Windows executable -->
     <Warning Text="Project output type is not WinExe; boostrapper will not be created." Condition="'$(OutputType)' != 'WinExe'" />
 
     <!-- Warning: not Windows target platform -->
     <Warning Text="Target platform is not Windows; boostrapper will not be created." Condition="'$(TargetPlatformIdentifier)' != 'Windows'" />
+  </Target>
 
-    <!-- TODO: detect latest available runtime for a given target framework version -->
+  <!-- TODO: detect latest available runtime for a given target framework version -->
+  <Target Name="CreateBootstrapperAfterBuild" AfterTargets="Build" Condition="'$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
+    <PropertyGroup>
+      <ApplicationIconFilePath Condition="'$(ApplicationIcon)' != ''">$([System.IO.Path]::Combine('$(ProjectDir)', '$(ApplicationIcon)'))</ApplicationIconFilePath>
+    </PropertyGroup>
+
     <CreateBootstrapperTask
-      Condition="'$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'"
       TargetApplicationName="$(AssemblyTitle)"
       TargetFilePath="$(TargetPath)"
       TargetRuntimeName="Microsoft.WindowsDesktop.App"
       TargetRuntimeVersion="$([System.String]::Copy('$(TargetFrameworkVersion)').Trim('v'))"
-      IconFilePath="$(ApplicationIconFullPath)" />
+      IconFilePath="$(ApplicationIconFilePath)" />
+  </Target>
+
+  <Target Name="CreateBootstrapperAfterPublish" AfterTargets="Publish" Condition="'$(OutputType)' == 'WinExe' AND '$(TargetPlatformIdentifier)' == 'Windows'">
+    <PropertyGroup>
+      <ApplicationIconFilePath Condition="'$(ApplicationIcon)' != ''">$([System.IO.Path]::Combine('$(ProjectDir)', '$(ApplicationIcon)'))</ApplicationIconFilePath>
+    </PropertyGroup>
+
+    <CreateBootstrapperTask
+      TargetApplicationName="$(AssemblyTitle)"
+      TargetFilePath="$(ProjectDir)/$(PublishDir)/$(AssemblyName).dll"
+      TargetRuntimeName="Microsoft.WindowsDesktop.App"
+      TargetRuntimeVersion="$([System.String]::Copy('$(TargetFrameworkVersion)').Trim('v'))"
+      IconFilePath="$(ApplicationIconFilePath)" />
   </Target>
 
 </Project>
