--- a/DotnetRuntimeBootstrapper.Executable/App.config
+++ b/DotnetRuntimeBootstrapper.Executable/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 
-<!-- This configuration file is required by the bootstrapper executable which runs on legacy .NET Framework for maximum compatibility -->
+<!-- This configuration file is required by the bootstrapper executable which runs on legacy .NET Framework for compatibility reasons -->
 
 <configuration>
-    <!-- Prefer .NET 3.5 (preinstalled on Windows 7), rollover to .NET 4.0 (preinstalled on Windows 8+) -->
+    <!-- Prefer .NET 3.5 (preinstalled on Windows 7), rollover to .NET 4.x (preinstalled on Windows 8+) -->
     <startup useLegacyV2RuntimeActivationPolicy="true">
         <supportedRuntime version="v2.0.50727" />
         <supportedRuntime version="v4.0" />
